// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`factory custom not found 2! 1`] = `
<div>
  <div>
    Not Found
  </div>
</div>
`;

exports[`factory custom not found 3! 1`] = `
<div>
  <div>
    Not Found
  </div>
</div>
`;

exports[`factory custom not found! 1`] = `
<div>
  <div>
    Not Found
  </div>
</div>
`;

exports[`factory load Renderer on need 1`] = `
<div>
  <div>
    This is Custom Renderer2, a is 
    23
  </div>
</div>
`;

exports[`factory unregistered Renderer 1`] = `
<div>
  <div
    class="cxd-Alert cxd-Alert--danger"
  >
    <div
      class="cxd-Alert-content"
    >
      <div
        class="cxd-Alert-desc"
      >
        <p>
          Error: 找不到对应的渲染器
        </p>
        <p>
          Path: 
          my-renderer
        </p>
        <pre>
          <code>
            {
  "type": "my-renderer",
  "a": 23
}
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`factory:definitions 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-PullRefresh"
    >
      <div
        class="cxd-PullRefresh-wrap"
        style="transform: translate3d(0, 0px, 0);"
      >
        <div
          class="cxd-PullRefresh-header"
        >
          
        </div>
        <div
          class="cxd-Page-content"
        >
          <div
            class="cxd-Page-main"
          >
            <div
              class="cxd-Page-header"
            >
              <h2
                class="cxd-Page-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    引用
                  </span>
                </span>
              </h2>
            </div>
            <div
              class="cxd-Page-body"
            >
              <div
                class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                style="position: relative;"
              >
                <div
                  class="cxd-Panel-heading"
                >
                  <h3
                    class="cxd-Panel-title"
                  >
                    <span
                      class="cxd-TplField"
                    >
                      <span>
                        表单
                      </span>
                    </span>
                  </h3>
                </div>
                <div
                  class="cxd-Panel-body"
                >
                  <form
                    class="cxd-Form cxd-Form--normal"
                    novalidate=""
                  >
                    <input
                      style="display: none;"
                      type="submit"
                    />
                    <div
                      class="cxd-Form-item cxd-Form-item--normal"
                      data-role="form-item"
                    >
                      <label
                        class="cxd-Form-label"
                      >
                        <span>
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              text2
                            </span>
                          </span>
                        </span>
                      </label>
                      <div
                        class="cxd-Form-control cxd-TextControl"
                      >
                        <div
                          class="cxd-TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            name="ref1"
                            placeholder=""
                            size="10"
                            type="text"
                            value="ref value"
                          />
                        </div>
                      </div>
                      <div
                        class="cxd-Remark cxd-Form-remark"
                      >
                        <span
                          class="cxd-Remark-icon"
                        >
                          <icon-mock
                            classname=" icon-warning-mark"
                            icon="warning-mark"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      class="cxd-Form-item cxd-Form-item--normal"
                      data-role="form-item"
                    >
                      <label
                        class="cxd-Form-label"
                      >
                        <span>
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              combo
                            </span>
                          </span>
                        </span>
                      </label>
                      <div
                        class="cxd-ComboControl cxd-Form-control"
                      >
                        <div
                          class="cxd-Combo cxd-Combo--multi cxd-Combo--ver"
                        >
                          <div
                            class="cxd-Combo-items"
                          >
                            <div
                              class="cxd-Combo-placeholder"
                            >
                              &lt;空&gt;
                            </div>
                          </div>
                          <div
                            class="cxd-Combo-toolbar"
                          >
                            <button
                              class="cxd-Button cxd-Button--default cxd-Combo-addBtn"
                              type="button"
                            >
                              <icon-mock
                                classname="icon icon-plus"
                                icon="plus"
                              />
                              <span>
                                新增
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Remark cxd-Form-remark"
                      >
                        <span
                          class="cxd-Remark-icon"
                        >
                          <icon-mock
                            classname=" icon-warning-mark"
                            icon="warning-mark"
                          />
                        </span>
                      </div>
                    </div>
                  </form>
                </div>
                <div
                  class="resize-sensor"
                  style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
  
                  <div
                    class="resize-sensor-expand"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                  >
                    
    
                    <div
                      style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                    />
                    
  
                  </div>
                  
  
                  <div
                    class="resize-sensor-shrink"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                  >
                    
    
                    <div
                      style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                    />
                    
  
                  </div>
                  
  
                  <div
                    class="resize-sensor-appear"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`factory:definitions override 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-PullRefresh"
    >
      <div
        class="cxd-PullRefresh-wrap"
        style="transform: translate3d(0, 0px, 0);"
      >
        <div
          class="cxd-PullRefresh-header"
        >
          
        </div>
        <div
          class="cxd-Page-content"
        >
          <div
            class="cxd-Page-main"
          >
            <div
              class="cxd-Page-header"
            >
              <h2
                class="cxd-Page-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    引用
                  </span>
                </span>
              </h2>
            </div>
            <div
              class="cxd-Page-body"
            >
              <div
                class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                style="position: relative;"
              >
                <div
                  class="cxd-Panel-heading"
                >
                  <h3
                    class="cxd-Panel-title"
                  >
                    <span
                      class="cxd-TplField"
                    >
                      <span>
                        表单
                      </span>
                    </span>
                  </h3>
                </div>
                <div
                  class="cxd-Panel-body"
                >
                  <form
                    class="cxd-Form cxd-Form--normal"
                    novalidate=""
                  >
                    <input
                      style="display: none;"
                      type="submit"
                    />
                    <div
                      class="cxd-Form-item cxd-Form-item--normal"
                      data-role="form-item"
                    >
                      <label
                        class="cxd-Form-label"
                      >
                        <span>
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              text2
                            </span>
                          </span>
                        </span>
                      </label>
                      <div
                        class="cxd-Form-control cxd-TextControl"
                      >
                        <div
                          class="cxd-TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            name="ref1"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="cxd-Remark cxd-Form-remark"
                      >
                        <span
                          class="cxd-Remark-icon"
                        >
                          <icon-mock
                            classname=" icon-warning-mark"
                            icon="warning-mark"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      class="cxd-Form-item cxd-Form-item--normal"
                      data-role="form-item"
                    >
                      <label
                        class="cxd-Form-label"
                      >
                        <span>
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              combo
                            </span>
                          </span>
                        </span>
                      </label>
                      <div
                        class="cxd-CheckboxesControl cxd-Form-control is-inline"
                      >
                        <label
                          class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                        >
                          <input
                            checked=""
                            type="checkbox"
                          />
                          <i />
                          <span
                            class=""
                          >
                            Option A
                          </span>
                        </label>
                        <label
                          class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                        >
                          <input
                            type="checkbox"
                          />
                          <i />
                          <span
                            class=""
                          >
                            Option B
                          </span>
                        </label>
                      </div>
                      <div
                        class="cxd-Remark cxd-Form-remark"
                      >
                        <span
                          class="cxd-Remark-icon"
                        >
                          <icon-mock
                            classname=" icon-warning-mark"
                            icon="warning-mark"
                          />
                        </span>
                      </div>
                    </div>
                  </form>
                </div>
                <div
                  class="resize-sensor"
                  style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
  
                  <div
                    class="resize-sensor-expand"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                  >
                    
    
                    <div
                      style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                    />
                    
  
                  </div>
                  
  
                  <div
                    class="resize-sensor-shrink"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                  >
                    
    
                    <div
                      style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                    />
                    
  
                  </div>
                  
  
                  <div
                    class="resize-sensor-appear"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`factory:registerRenderer 1`] = `
<div>
  <div>
    This is Custom Renderer, a is 
    23
  </div>
</div>
`;
